# 121supo

./: CMakeLists.txt  README.md  main.c
celt/: arch.h  celt.c  celt.h  celt_decoder.c  celt_lpc.c  celt_lpc.h  cpu_support.h  ecintrin.h  entcode.c  entcode.h  entdec.c  entdec.h  entenc.c  entenc.h  fixed_generic.h  mathops.h  mfrngcod.h  modes.c  modes.h  os_support.h  pitch.c  pitch.h  rate.h  stack_alloc.h
opus_include/: opus.h  opus_custom.h  opus_defines.h  opus_types.h
silk/: A2NLSF.c  API.h  HP_variable_cutoff.c  Inlines.h  LPC_analysis_filter.c  LPC_fit.c  LPC_inv_pred_gain.c  NLSF2A.c  NLSF_VQ.c  NLSF_VQ_weights_laroia.c  NLSF_decode.c  NLSF_del_dec_quant.c  NLSF_encode.c  NLSF_stabilize.c  NLSF_unpack.c  NSQ.h  NSQ_del_dec.c  SigProc_FIX.h  VAD.c  VQ_WMat_EC.c  ana_filt_bank_1.c  bwexpander.c  bwexpander_32.c  check_control_input.c  code_signs.c  control.h  control_SNR.c  control_audio_bandwidth.c  control_codec.c  decode_indices.c  decoder_set_fs.c  define.h  enc_API.c  encode_indices.c  encode_pulses.c  errors.h  gain_quant.c  init_encoder.c  interpolate.c  lin2log.c  (+27 more)
silk/fixed/: LTP_analysis_filter_FIX.c  LTP_scale_ctrl_FIX.c  apply_sine_window_FIX.c  autocorr_FIX.c  burg_modified_FIX.c  corrMatrix_FIX.c  encode_frame_FIX.c  find_LPC_FIX.c  find_LTP_FIX.c  find_pitch_lags_FIX.c  find_pred_coefs_FIX.c  k2a_FIX.c  k2a_Q16_FIX.c  main_FIX.h  noise_shape_analysis_FIX.c  pitch_analysis_core_FIX.c  process_gains_FIX.c  residual_energy_FIX.c  schur64_FIX.c  (+4 more)
src/: opus.c  opus_compare.c  opus_decoder.c  opus_encoder.c  opus_private.h  repacketizer.c
(+1 files in other folders)
